Fix layout bug in product cards

--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -49,7 +49,7 @@
         align-items: flex-start;
         align-content: flex-start;
         flex-wrap: wrap;
-        // margin-left: -0.35rem; // acct for margin of children
+        margin-left: -0.35rem; // acct for margin of children
 
         li {
           padding: 0.5rem 1rem;
